--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </footer>
 
     <!-- Game Modal -->
-<div id="game-modal" class="modal">
+<div id="game-modal" class="modal" style="display: none;">
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
         <iframe id="game-frame" src="" width="800" height="600"></iframe>
