--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div id="game-modal" class="modal" style="display: none;">
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
-        <iframe id="game-frame" src="" width="800" height="600"></iframe>
+        <iframe id="gameFrame" src="games/dodge-the-creeps/index.html"></iframe>
     </div>
 </div>
 
