--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <!-- Section 2: Play -->
     <section id="play">
         <h2>Apps and Games</h2>
-        <div class="game-card">
+        <div class="game-card" onclick="openModal()">
             <h3>Dodge the Creeps</h3>   
             <p>Dodge enemies and beat your high score!</p>
-            <iframe src="games/dodge-the-creeps/index.html" width="600" height="400"></iframe>
+            <img src="images/dodge-the-creeps-thumbnail.png" alt="Dodge the Creeps" class="game-thumbnail">
         </div>
     </section>
 
@@ -43,11 +43,11 @@
         <p>&copy; 2025 Potion House | Created by Ken. All rights reserved.</p>
     </footer>
 
-    <!-- Game Modal -->
-<div id="game-modal" class="modal" style="display: none;">
+<!-- Game Modal -->
+<div id="game-modal" class="modal">
     <div class="modal-content">
         <span class="close" onclick="closeModal()">&times;</span>
-        <iframe id="gameFrame" src="games/dodge-the-creeps/index.html"></iframe>
+        <iframe id="gameFrame" src="" allowfullscreen></iframe>
     </div>
 </div>
 
