Fixed modal auto-launching, game loading, and broken image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="game-card" onclick="openModal()">
             <h3>Dodge the Creeps</h3>   
             <p>Dodge enemies and beat your high score!</p>
-            <img src="images/dodge-the-creeps-thumbnail.png" alt="Dodge the Creeps" class="game-thumbnail">
+            <img src="images/dodge-the-creeps.png" alt="Dodge the Creeps" class="game-thumbnail">
         </div>
     </section>
 
