Fixed modal click issue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <h2>Apps and Games</h2>
         <div class="game-card" onclick="openModal()">
             <h3>Dodge the Creeps</h3>   
-            <p>Dodge enemies and beat your high score!</p>
+            <p>Dodge enemies</p>
+            <p>Controls: Keyboard Arrow Keys</p>
             <img src="images/dodge-the-creeps.png" alt="Dodge the Creeps" class="game-thumbnail">
         </div>
     </section>
@@ -50,6 +51,8 @@
         <iframe id="gameFrame" src="" allowfullscreen></iframe>
     </div>
 </div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
