--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <section id="play">
         <h2>Apps and Games</h2>
         <div class="game-card" onclick="openModal()">
-            <h3>Dodge and Survive</h3>   
-            <p>Dodge enemies and survive as long as you can!</p>
+            <h3>Dodge the Creeps</h3>   
             <p>Controls: Keyboard Arrow Keys</p>
             <img src="images/dodge-the-creeps.png" alt="Dodge the Creeps" class="game-thumbnail">
         </div>
