Fixed WebGL 2 issue in Safari by ensuring iframe reload and proper rendering

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Section 2: Play -->
     <section id="play">
         <h2>Apps and Games</h2>
-        <div class="game-card" onclick="openModal()">
+        <div class="game-card" onclick="openGame()">
             <h3>Dodge the Creeps</h3>   
             <p>Controls: Keyboard Arrow Keys</p>
             <img src="images/dodge-the-creeps.png" alt="Dodge the Creeps" class="game-thumbnail">
