Updated Dodge the Creeps game files

--- a/games/dodge-the-creeps/index.html
+++ b/games/dodge-the-creeps/index.html
@@ -76,8 +76,8 @@ body {
 	z-index: 1;
 }
 		</style>
-		<link id="-gd-engine-icon" rel="icon" type="image/png" href="Godot Exports - dodge_the_creeps.icon.png" />
-<link rel="apple-touch-icon" href="Godot Exports - dodge_the_creeps.apple-touch-icon.png"/>
+		<link id="-gd-engine-icon" rel="icon" type="image/png" href="dodge-the-creeps.icon.png" />
+<link rel="apple-touch-icon" href="dodge-the-creeps.apple-touch-icon.png"/>
 
 	</head>
 	<body>
@@ -90,14 +90,14 @@ body {
 		</noscript>
 
 		<div id="status">
-			<img id="status-splash" src="Godot Exports - dodge_the_creeps.png" alt="">
+			<img id="status-splash" src="dodge-the-creeps.png" alt="">
 			<progress id="status-progress"></progress>
 			<div id="status-notice"></div>
 		</div>
 
-		<script src="Godot Exports - dodge_the_creeps.js"></script>
+		<script src="dodge-the-creeps.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"Godot Exports - dodge_the_creeps","experimentalVK":false,"fileSizes":{"Godot Exports - dodge_the_creeps.pck":2063776,"Godot Exports - dodge_the_creeps.wasm":35376909},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"dodge-the-creeps","experimentalVK":false,"fileSizes":{"dodge-the-creeps.pck":2063776,"dodge-the-creeps.wasm":35376909},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
